# CrewManagement

./: .gitignore
L1SignalFabric/: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt
L1SignalFabric/api/: app.py  live.py
L1SignalFabric/api/routes/: _push.py  health.py  slack.py
L1SignalFabric/api/static/: dashboard.html
L1SignalFabric/connectors/: README.md  __init__.py
L1SignalFabric/connectors/common/: __init__.py  email.py  graph.py  http.py  logger.py  secrets.py  writer.py
L1SignalFabric/connectors/database/: cli.py
L1SignalFabric/connectors/gmail/: cli.py  client.py  connector.py  mappers.py
L1SignalFabric/connectors/notion/: __init__.py  block_parser.py  cli.py  client.py  connector.py  models.py
L1SignalFabric/connectors/outlook/: __init__.py  cli.py  client.py  connector.py  mappers.py
L1SignalFabric/connectors/sharepoint/: __init__.py  cli.py  client.py  connector.py  mappers.py
L1SignalFabric/connectors/slack/: __init__.py  backfill.py  cli.py  client.py  connector.py  mappers.py  models.py  user_cache.py
L1SignalFabric/core/: __init__.py  bus.py  connector.py  signal.py
L1SignalFabric/demo/: stream.py
L1SignalFabric/docs/: CONNECTOR_SETUP.md  L1_SignalFabric_Connector_Setup.docx
L1SignalFabric/l2/: __init__.py  store.py
L1SignalFabric/tests/: test_contract.py  test_gmail.py  test_l2_pipe.py  test_outlook.py  test_sharepoint.py
L1SignalFabric/tests/agents/: critic_agent.py  scenarios.py  test_agent.py
backend/: bootstrap.py  config.py  main.py
frontend/: tsconfig.tsbuildinfo
(+36 files in other folders)
